[package]
name = "tail_chaser"
version = "0.1.4"
authors = ["Anthony Martinez <anthony@ajmartinez.com>"]
edition = "2018"
license = "GPL-3.0+"
readme = "README.md"
homepage = "https://github.com/anthonyjmartinez/tail_chaser"
repository = "https://github.com/anthonyjmartinez/tail_chaser.git"
description = "Project moved to 'staart'"
keywords = ["abandoned"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true
panic = 'abort'

